# agileai

./: .gitignore  README.md
backend_service/: pyproject.toml  requirements.txt
backend_service/src/agileai/: __init__.py  common.py  database.py  github_api.py  ldvis.jsx  main.py  visualization.py
frontend_service/: .gitignore  index.html  package.json  tailwind.config.js
frontend_service/src/: App.tsx  index.css
frontend_service/src/components/: LDAVisViewer.tsx  PyLDAVisViewer.tsx
frontend_service/src/components/Charts/: AreaChart.tsx  BarChart.tsx  BaseChart.tsx  ChartExamples.tsx  CollaborationMatrix.tsx  DonutChart.tsx  FunnelChart.tsx  HeatMap.tsx  LineChart.tsx  PieChart.tsx  RadarChart.tsx  SankeyChart.tsx  ScatterChart.tsx  ScatterPlotMatrix.tsx  Sparkline.tsx  TimelineChart.tsx  TreeMap.tsx  ViolinPlot.tsx  chart.tsx  index.ts
frontend_service/src/components/Chat/: ChatInterface.tsx
frontend_service/src/components/Dashboard/: MetricsCards.tsx  RepositoryInput.tsx
frontend_service/src/components/DataTable/: columns.tsx  data-table.tsx
frontend_service/src/components/layouts/: MainLayout.tsx
frontend_service/src/components/ui/: Header.tsx  Sidebar.tsx  input.tsx  toast.tsx  toaster.tsx  use-toast.ts
frontend_service/src/components/ui/layouts/: Header.tsx  MainLayout.tsx  Sidebar.tsx
frontend_service/src/lib/: api-types.ts  api.ts  utils.ts
frontend_service/src/pages/: AnalysisPage.tsx  ChartExamplesPage.tsx  DashboardPage.tsx  LandingPage.tsx
